# zconnect-django

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .isort.cfg  .pylintrc  LICENSE  README.md  pytest.ini  setup.cfg  setup.py  tox.ini
doc/: Makefile  requirements.txt
doc/source/: authentication.rst  conf.py  index.rst  listener.rst  migrations.rst  objectpermissions.rst  style.rst
scripts/: dump_pem_to_jwks.py  gen_keys.py
tests/: conftest.py
tests/brokers/: test_broker_interface.py  test_ibm.tavern.yaml  test_schema_validation.py
tests/celery/: test_archive_task.py  test_billing_tasks.py  test_periodic.py  test_tasks.py
tests/endpoints/: test_activity_stream.py  test_bill_endpoints.py  test_devices.py  test_event_definition_endpoint.py  test_health_endpoint.py  test_location_endpoint.py  test_login.py  test_login_logout.tavern.yaml  test_orgs.py  test_password_reset.py  test_products_endpoint.py  test_ts_data.py  test_user_endpoint.py
tests/handlers/: test_activity_handler.py  test_event_message_handler.py
tests/messages/: test_listener.py
tests/models/: test_billing_model.py  test_device_models.py  test_ts_model.py
tests/utils/: test_device_context.py  test_event_condition_parser.py  test_ts_insert.py
zc_test_app/: apps.py  celery_app.py  manage.py  models.py  settings.py  urls.py
zc_test_app/migrations/: 0001_initial.py  0002_add_foreign_keys.py
zconnect/: __init__.py  activity_stream.py  admin.py  apps.py  filters.py  handlers.py  messages.py  models.py  pagination.py  permissions.py  pytesthook.py  rules.py  serializers.py  tasks.py  urls.py  views.py
zconnect/_messages/: __init__.py  bases.py  entry.py  listener.py  message.py  schemas.py  sender.py
zconnect/_models/: __init__.py  activity_stream.py  base.py  device.py  event.py  location.py  mixins.py  organization.py  product.py  states.py  user.py
zconnect/fixtures/: README.md
zconnect/migrations/: .gitignore  0001_initial.py  0002_create_other_models.py  0003_location_optional_fields_nullable.py  0004_increase_last_name_length.py  0005_org_device_related_name.py  0006_user_phone_number.py  0007_create_activity_subscription_model.py  0008_org_logo.py  0009_event_defs.py  (+3 more)
(+66 files in other folders)
