[metadata]
name = zconnect
description = Django ZConnect base package
version = attr: zconnect.__version__
# long_description = file: README.rst
author = Michael Boulton
author_email = boulton@zoetrope.io

[options]
packages = find:
include_package_data = True

install_requires =
    django>=2,<2.1
    psycopg2-binary
    django-filter
    django-guardian
    django-rest-framework-rules
    django-sendsms==0.3.1
    rules
    djangorestframework
    djangorestframework-simplejwt
    django-rest-auth
    django-phonenumber-field
    phonenumbers
    pyparsing
    python-dateutil
    flask
    flask-cors
    celery
    pyyaml
    redis
    timezonefinder
    django-filters
    django-organizations
    django-extensions
    drf_writable_nested
    cached_property
    django-cors-headers
    django-jsonfield
    django-db-file-storage
    pillow
    django-jsonfield-compat
    cryptography
    semver
    django_celery_beat
    django-activity-stream
    sqlparse
    django-phonenumber-field
    kombu
    idna==2.6

    # drf-extensions>=0.4.0 # We need this but it's not currently released - install manually as dependency_links
    # ibmiotf same as above

dependency_links =
    git+https://github.com/chibisov/drf-extensions.git@00712396be979aaa5a86246bee39284b5e5e8d71#egg=drf-extensions-0.4.0
    git+https://github.com/ZoetropeLabs/iot-python.git@c868f770efb5f2d8c25bf6ee9a55ce38b2f94f06#egg=ibmiotf

[options.packages.find]
exclude =
    tests
    zc_test_app

[options.entry_points]
pytest11 =
    zconnect = zconnect.pytesthook

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[tool:pyflakes]
exclude = .tox,*.egg,dist,build,docs/source
show-source = true
max-line-length = 200
ignore = N802

[coverage:run]
omit =
    tests/*
    .eggs/*
    setup.py
    env/*
    build/*
    dist/*

[tool:pytest]
addopts =
    --cov-report term-missing
    --doctest-modules
    -r xs -v --strict
    -p no:logging
norecursedirs =
    .git
    .tox
    .eggs
    run
    requirements
    doc
    configs
    zc_test_app

markers =
    notavern: A test that can't be auto converted to Tavern YAML
